--- a/controller/src/App.scss
+++ b/controller/src/App.scss
@@ -18,8 +18,19 @@
 .container {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .joystick{
-  padding-top: 100px;
+  margin-top: 100px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.stream{
+margin-top: 15px;
+width: 80%;
+//height: auto; //TODO: Add when livestream is ready
+height: 200px; //TODO: Remove when livestream is ready
+background-color: black; 
 }
